@@ -1,3 +1,7 @@
+2006-05-22 Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* bin/event_test.pl: Fixed STC block in boiler plate test message
+
 2006-05-19 Alasdair Allan <aa@astro.ex.ac.uk>
 
 	* bin/event_broker.pl: Moved to VOEvent v1.1
